# Mestrado

src/plt_cv/nodes/: img_proc  line_tracking
src/plt_cv/src/plt_cv/: edge.py  filter_noise.py  line_detector.py  utils.py
src/plt_gazebo/: CMakeLists.txt  package.xml
src/plt_gazebo/models/my_ground_plane/: model.sdf
src/plt_gazebo/models/my_ground_plane/materials/scripts/: my_ground_plane.material
src/plt_gazebo/models/pole_wireless/: model.config
src/plt_gazebo/models/typhoon_h480/: typhoon_h480.sdf
src/plt_resources/mission/parameters/: typhoon-parameters.params
